// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apiCalls get should send a get request on the provided path and return promise if response is in 200 range 1`] = `
Object {
  "headers": Object {
    "Content-Type": "application/json",
  },
  "method": "GET",
}
`;

exports[`apiCalls post should return promise if response is in 200 range 1`] = `
Object {
  "body": "{\\"key\\":\\"value\\"}",
  "headers": Object {
    "Content-Type": "application/json",
  },
  "method": "POST",
}
`;
